sites/vie/applications/qdrant/zoocode/extensions/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qdrant-zoocode
  annotations:
    external-dns.kubernetes.io/provider: public
    external-dns.kubernetes.io/target: "${PUBLIC_IP}"
spec:
  parentRefs:
    - name: qdrant-zoocode-listeners
      kind: ListenerSet
      group: gateway.networking.k8s.io
  hostnames:
    - zoocode.qdrant.ai.${HOME_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: qdrant-zoocode
          port: 6333
